--- a/application/product/view/product/index_search.html
+++ b/application/product/view/product/index_search.html
@@ -22,16 +22,17 @@
                 </select>
             </div>
         </div>
+
         <div class="layui-form-item layui-inline">
             <label class="layui-form-label">销售状态</label>
             <div class="layui-input-inline">
                 <select class="layui-select" name="status">
-                    {foreach [''=>'- 全部状态 -','1'=>'销售中商品','0'=>'已下架商品'] as $k=>$v}
-                    <!--{eq name='Think.get.status' value='$k.""'}-->
+                    {foreach [''=>'- 全部状态 -','0'=>'上架中','1'=>'已下架'] as $k=>$v}
+                    {eq name='Think.get.status' value='$k.""'}
                     <option selected value="{$k}">{$v}</option>
-                    <!--{else}-->
+                    {else}
                     <option value="{$k}">{$v}</option>
-                    <!--{/eq}-->
+                    {/eq}
                     {/foreach}
                 </select>
             </div>
