--- a/application/user/view/member/form.html
+++ b/application/user/view/member/form.html
@@ -75,7 +75,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">注册时间</label>
             <div class="layui-input-block">
-                <input name="created_time" value="{$vo.created_time|default=''}"  class="layui-input" >
+                <input name="created_time" value="{$vo.created_time}"  class="layui-input" >
             </div>
         </div>
 
